--- a/client/src/style.css
+++ b/client/src/style.css
@@ -62,13 +62,15 @@ tr:hover {
 }
 
 body {
-  width: 100%;
+  /* width: 100%; */
   /* background-color: #f2eecb; */
   /* color: rgb(2, 2, 37); */
   /* color: white; */
   margin: 0;
   padding: 0;
-  background-image: url("./img/paper.jpg");
+  background-image: url("./img/paper2.png");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 #top-bar {
